# logos-design-system

./: .gitignore  CMakeLists.txt  README.md  flake.nix
examples/: CMakeLists.txt  ColorDemo.qml  ThemeSwitcher.qml  TypographyDemo.qml  build_and_run.sh  examples.qrc  main.cpp  main.qml
src/qml/: Spacing.qml  Theme.qml  Typography.qml  qmldir
src/qml/controls/: LogosButton.qml  LogosTabButton.qml  LogosText.qml  LogosTextField.qml  qmldir
src/qml/theme/: ColorPalette.qml  DarkTheme.qml  Spacing.qml  Typography.qml  qmldir
